feat-me: profile feature for updating profile and password
